Add CPU/GPU auto-detection and CPU-only server support
- Modified FluxImageProcessor to auto-detect available device (CPU/GPU)
- Added CPU fallback when GPU is not available
- Updated health checks to provide detailed GPU information
- Modified docker-compose.yml to work without GPU requirements
- Updated model path to /app/models/flux for consistency
- Added device-specific optimizations for both CPU and GPU
- Made GPU optional in health status (system healthy without GPU)

--- a/.env.example
+++ b/.env.example
@@ -35,10 +35,10 @@ MAX_IMAGES_PER_REQUEST=3
 SUPPORTED_FORMATS="jpg,jpeg,png,webp"
 
 # AI Model Configuration
-FLUX_MODEL_PATH="/app/models/flux-dev"
+FLUX_MODEL_PATH="/app/models/flux"
 LORA_MODEL_PATH="/app/models/lora-upscale"
 GPU_MEMORY_FRACTION=0.9
-TORCH_DEVICE="cuda"
+TORCH_DEVICE="auto"  # auto, cpu, cuda
 
 # File Storage Configuration
 STORAGE_TYPE="local"  # local, s3, minio
